--- a/app/package.json
+++ b/app/package.json
@@ -12,13 +12,15 @@
   },
   "dependencies": {
     "autoprefixer": "^10.4.16",
+    "axios": "^1.6.5",
     "country-state-city": "^3.2.1",
     "lottie-react": "^2.4.0",
     "postcss": "^8.4.32",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
-    "react-router-dom": "^6.21.1"
+    "react-router-dom": "^6.21.1",
+    "react-toastify": "^10.0.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
