--- a/app/.prettierrc
+++ b/app/.prettierrc
@@ -1,8 +1,11 @@
 {
-  "bracketSpacing": true,
-  "printWidth": 140,
+  "printWidth": 80,
+  "tabWidth": 2,
+  "semi": false,
   "singleQuote": true,
   "trailingComma": "none",
-  "tabWidth": 2,
-  "useTabs": false
+  "bracketSpacing": true,
+  "jsxBracketSameLine": false,
+  "arrowParens": "always",
+  "jsxSingleQuote": true
 }
