--- a/server/package.json
+++ b/server/package.json
@@ -11,7 +11,11 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "nodemon": "^3.0.2"
+    "eslint": "^8.56.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "nodemon": "^3.0.2",
+    "prettier": "3.2.4"
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
