--- a/app/package.json
+++ b/app/package.json
@@ -27,7 +27,8 @@
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.21.1",
-    "react-toastify": "^10.0.3"
+    "react-toastify": "^10.0.3",
+    "react-toggle-dark-mode": "^1.1.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
