--- a/server/package.json
+++ b/server/package.json
@@ -27,6 +27,7 @@
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
     "express-rate-limit": "^7.1.5",
+    "googleapis": "^133.0.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.3",
     "morgan": "^1.10.0",
