--- a/app/package.json
+++ b/app/package.json
@@ -25,6 +25,7 @@
     "postcss": "^8.4.33",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-error-boundary": "^4.0.13",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.21.1",
     "react-toastify": "^10.0.3",
@@ -34,6 +35,7 @@
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "@vitejs/plugin-react-swc": "^3.6.0",
+    "daisyui": "^4.7.2",
     "eslint": "^8.56.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
