--- a/app/package.json
+++ b/app/package.json
@@ -1,46 +1,50 @@
 {
   "name": "multi-vendor-front-end",
   "description": "E-Commerce-multi-vendor Project",
+  "name": "E-Commerce",
   "private": true,
   "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
   "dependencies": {
-    "@emotion/react": "^11.11.3",
-    "@emotion/styled": "^11.11.0",
-    "@heroicons/react": "^2.1.1",
-    "@material-tailwind/react": "^2.1.8",
-    "@mui/icons-material": "^5.15.10",
-    "@mui/material": "^5.15.10",
-    "@reduxjs/toolkit": "^2.1.0",
-    "autoprefixer": "^10.4.16",
-    "axios": "^1.6.5",
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@heroicons/react": "^2.1.5",
+    "@material-tailwind/react": "^2.1.10",
+    "@mui/icons-material": "^6.1.1",
+    "@mui/material": "^6.1.1",
+    "@mui/x-data-grid": "^7.18.0",
+    "@reduxjs/toolkit": "^2.2.7",
+    "axios": "^1.7.7",
     "country-state-city": "^3.2.1",
     "lottie-react": "^2.4.0",
-    "postcss": "^8.4.33",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-error-boundary": "^4.0.13",
-    "react-redux": "^9.1.0",
-    "react-router-dom": "^6.21.1",
-    "react-toastify": "^10.0.3",
+    "react-redux": "^9.1.2",
+    "react-router-dom": "^6.26.2",
+    "react-toastify": "^10.0.5",
     "react-toggle-dark-mode": "^1.1.1"
   },
   "devDependencies": {
-    "@types/react": "^18.2.43",
-    "@types/react-dom": "^18.2.17",
-    "@vitejs/plugin-react-swc": "^3.6.0",
-    "daisyui": "^4.7.2",
-    "eslint": "^8.56.0",
-    "eslint-plugin-react": "^7.33.2",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.5",
-    "tailwindcss": "^3.4.0",
-    "vite": "^5.0.8"
+    "@eslint/js": "^9.11.0",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "@vitejs/plugin-react": "^4.3.1",
+    "autoprefixer": "^10.4.20",
+    "daisyui": "^4.12.10",
+    "eslint": "^9.11.0",
+    "eslint-plugin-react": "^7.36.1",
+    "eslint-plugin-react-hooks": "^5.1.0-rc.0",
+    "eslint-plugin-react-refresh": "^0.4.12",
+    "globals": "^15.9.0",
+    "postcss": "^8.4.47",
+    "tailwind-scrollbar": "^3.1.0",
+    "tailwindcss": "^3.4.12",
+    "vite": "^5.0.10"
   }
 }
