--- a/app/package.json
+++ b/app/package.json
@@ -22,6 +22,7 @@
     "axios": "^1.7.7",
     "country-state-city": "^3.2.1",
     "lottie-react": "^2.4.0",
+    "nodemon": "^3.1.10",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-error-boundary": "^4.0.13",
